# cs5343-Sleeping-TA

./: CMakeLists.txt  README.md  main.cpp
src/: office.cpp  office.h  student.cpp  student.h  ta.cpp  ta.h
tests/: studentTest.cpp
utility/: utility.h
